5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1643_2704.log
== TEST (2019-04-13 02:59:42) 
-- CODE:
aluno=float(input("digite a nota:"))
if (0 a 10):
   print(S)
else:
	print(N)
   
-- ERROR:
File "XXXX", line 2
    if (0 a 10):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:00:53) 
-- CODE:
aluno=float(input("digite a nota:"))
if (0 >= 10):
   print(S)
else:
	print(N)
   
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(N)
NameError: name 'N' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:00:53) 
-- CODE:
aluno=float(input("digite a nota:"))
if (0 >= 10):
   print(S)
else:
	print(N)
   
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(N)
NameError: name 'N' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:00:53) 
-- CODE:
aluno=float(input("digite a nota:"))
if (0 >= 10):
   print(S)
else:
	print(N)
   
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(N)
NameError: name 'N' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:01:25) 
-- CODE:
aluno=float(input("digite a nota:"))
if (0 >= 10):
	mensagem(S)
else:
	mensagem(N)
print(mensagem)
   
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    mensagem(N)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:01:50) 
-- CODE:
aluno=float(input("digite a nota:"))
if (0 >= 10):
	mensagem(S)
else:
	mensagem(N)
   
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    mensagem(N)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:04:26) 
-- CODE:
aluno=float(input("digite a nota:"))
if (aluno >= 10):
	mensagem(S)
else:
	mensagem(N)
   
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    mensagem(N)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:04:54) 
-- CODE:
aluno=float(input("digite a nota:"))
if (aluno >= 10):
	mensagem(n)
else:
	mensagem(s)
   
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    mensagem(s)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 03:05:09) 
-- CODE:
aluno=float(input("digite a nota:"))
if (aluno >= 10):
	mensagem(s)
else:
	mensagem(n)
   
-- EXECUTION TIME:
0.200196
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2704/main.py", line 5, in <module>
    mensagem(n)
NameError: name 'mensagem' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:05:11) 
-- CODE:
aluno=float(input("digite a nota:"))
if (aluno >= 10):
	mensagem(s)
else:
	mensagem(n)
   
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    mensagem(n)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:05:55) 
-- CODE:
aluno=float(input("digite a nota:"))
if (aluno >= 0.10):
	mensagem(s)
else:
	mensagem(n)
   
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    mensagem(s)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:21:13) 
-- CODE:
aluno=float(input("digite a nota:"))
if (aluno == 10):
	mensagem(s)
else:
	mensagem(n)
   
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    mensagem(n)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:21:34) 
-- CODE:
aluno=float(input("digite a nota:"))
if (aluno == 10):
	mensagem(s)
else:
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(n)
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:22:33) 
-- CODE:
aluno=float(input("digite a nota:"))
if (aluno == 10):
	mensagem("s")
else:
	print("n",0.10)
-- OUTPUT:
n 0.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 03:22:50) 
-- CODE:
aluno=float(input("digite a nota:"))
if (aluno == 10):
	mensagem("s")
else:
	print("n",0.10)
-- EXECUTION TIME:
0.209091
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
n 0.1
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
n 0.1
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
n 0.1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:23:56) 
-- CODE:
aluno=float(input("digite a nota:"))
if  0>= 10:
	mensagem("s")
else:
	print("n",0.10)
-- OUTPUT:
n 0.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 03:26:14) 
-- CODE:
aluno=float(input("digite a nota:"))
if  0>= 10:
	nota=("s" ou "n")
print(nota)
-- EXECUTION TIME:
0.133574
-- ERROR:
  File "/home/codebench/codes/1643/2704/main.py", line 3
    nota=("s" ou "n")
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:26:15) 
-- CODE:
aluno=float(input("digite a nota:"))
if  0>= 10:
	nota=("s" ou "n")
print(nota)
-- ERROR:
File "XXXX", line 3
    nota=("s" ou "n")
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:26:28) 
-- CODE:
aluno=float(input("digite a nota:"))
if  0>= 10:
	nota=("s" , "n")
print(nota)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(nota)
NameError: name 'nota' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:29:40) 
-- CODE:
aluno=float(input("digite a nota:"))
if  0 == 10:
	nota= aluno-(aluno*0.10)
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(nota)
NameError: name 'nota' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:30:08) 
-- CODE:
aluno=float(input("digite a nota:"))
if  0 == 10:
	nota= aluno-(aluno*0.10)
print(nota)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(nota)
NameError: name 'nota' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:30:25) 
-- CODE:
aluno=float(input("digite a nota:"))
if  0 == 10:
	nota= aluno-(aluno*0.10)
print(5)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 03:30:37) 
-- CODE:
aluno=float(input("digite a nota:"))
if  0 == 10:
	nota= aluno-(aluno*0.10)
print(5)
-- EXECUTION TIME:
0.123428
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
5
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:31:51) 
-- CODE:
aluno=float(input("digite a nota:"))
aprovacao=float(input("aprovado"))
if  0 == 10:
	nota= aluno-(aluno*0.10)
print(5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    aprovacao=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:32:06) 
-- CODE:
aluno=float(input("digite a nota:"))
aprovacao=float(input("aprovado"))
if  0 == 10:
	nota= aluno-(aluno*0.10)
print(5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    aprovacao=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:32:39) 
-- CODE:
aluno=float(input("digite a nota:"))
aprovacao=int(input("aprovado:"))
if  0 == 10:
	nota= aluno-(aluno*0.10)
print(5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    aprovacao=int(input())
ValueError: invalid literal for int() with base 10: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:32:58) 
-- CODE:
aluno=float(input("digite a nota:"))
aprovacao=float(input("aprovado:"))
if  0 == 10:
	nota= aluno-(aluno*0.10)
print(5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    aprovacao=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:33:16) 
-- CODE:
aluno=float(input("digite a nota:"))
aprovacao=float(input("aprovado:"))
if  0 == 10:
	nota= aluno-(aluno*0.10)
print(nota)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    aprovacao=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:33:46) 
-- CODE:
aluno=float(input("digite a nota:"))
aprovacao=float(input("s ou n:"))
if  0 == 10:
	nota= aluno-(aluno*0.10)
print(nota)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    aprovacao=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:34:34) 
-- CODE:
aluno=float(input("digite a nota:"))
aprovacao=float(input("s_ou_n:"))
if  0 == 10:
	nota= aluno-(aluno*0.10)
print(nota)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    aprovacao=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:34:49) 
-- CODE:
aluno=float(input("digite a nota:"))
aprovacao=float(input())
if  0 == 10:
	nota= aluno-(aluno*0.10)
print(nota)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    aprovacao=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:36:39) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=float(input())
if  0 == 10:
	aluno= nota-(nota*0.10)
print(nota)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    aprovacao=float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:37:28) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=int(input())
if  0 == 10:
	aluno= nota-(nota*0.10)
print(nota)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    aprovacao=int(input())
ValueError: invalid literal for int() with base 10: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:37:47) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	aluno= nota-(nota*0.10)
print(nota)
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 03:38:06) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	aluno= nota-(nota*0.10)
print(nota)
-- EXECUTION TIME:
0.121915
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:38:11) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	aluno= nota-(nota*0.10)
print(nota)
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 03:38:25) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	aluno= nota-(nota*0.10)
print(nota)
-- EXECUTION TIME:
0.160499
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:38:51) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	aluno= nota-(nota*0.10)
print(aprovacao,6)
-- OUTPUT:
S 6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:39:06) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	aluno= nota-(nota*0.10)
print(aprovacao)
-- OUTPUT:
S
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:39:26) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	aluno= nota-(nota*0.10)
print(aluno)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(aluno)
NameError: name 'aluno' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:40:04) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	aluno=(nota*0.10)
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(aluno)
NameError: name 'aluno' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:42:11) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	aluno=(66*0.10)
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(aluno)
NameError: name 'aluno' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:42:31) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	aluno=(66*0.10)
print(aluno)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(aluno)
NameError: name 'aluno' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:42:52) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	aluno=(66*0.10)
print(round(aluno))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(aluno))
NameError: name 'aluno' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:43:37) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	aluno_s=(66*0.10)
print(aluno_s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(aluno_s)
NameError: name 'aluno_s' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:43:53) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	aluno_s=(66*0.10)
print(aluno_n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(aluno_n)
NameError: name 'aluno_n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:44:39) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	aluno_s=(66*0.10)
else:
	mensagen("s ou n")
print(aluno_n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    mensagen("s ou n")
NameError: name 'mensagen' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:45:00) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	aluno_s=(66*0.10)
else:
	mensagem("s ou n")
print(aluno_s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    mensagem("s ou n")
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:45:31) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	aluno_s=(66*0.10)
else:
	mensagem="s ou n"
print(aluno_s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(aluno_s)
NameError: name 'aluno_s' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:45:55) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	aluno=(66*0.10)
else:
	mensagem="s ou n"
print(aluno)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(aluno)
NameError: name 'aluno' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:46:16) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	aluno=(66*0.10)
else:
	mensagem="s ou n"
print(mensagem
-- ERROR:
File "XXXX", line 8
    
                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:46:27) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	aluno=(66*0.10)
else:
	mensagem="s ou n"
print(mensagem)
-- OUTPUT:
s ou n
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 03:46:41) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	aluno=(66*0.10)
else:
	mensagem="s ou n"
print(mensagem)
-- EXECUTION TIME:
0.21729
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
s ou n
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
s ou n
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
s ou n
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:47:46) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	mensagem= "s ou n"
else:
	aluno=(66*0.10)

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:48:04) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	mensagem= "s ou n"
else:
	aluno=(66*0.10)

print(aluno)
-- OUTPUT:
6.6000000000000005
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 03:48:25) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	mensagem= "s ou n"
else:
	aluno=(66*0.10)

print(aluno)
-- EXECUTION TIME:
0.134214
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
6.6000000000000005
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
6.6000000000000005
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
6.6000000000000005
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:48:42) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	mensagem= "s ou n"
else:
	aluno=(6*0.10)

print(aluno)
-- OUTPUT:
0.6000000000000001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:49:01) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	mensagem= "s ou n"
else:
	aluno=(600.10)

print(aluno)
-- OUTPUT:
600.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:49:32) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	mensagem= "s ou n"
else:
	aluno=(606*0.10)

print(aluno)
-- OUTPUT:
60.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:49:59) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	mensagem= "s ou n"
else:
	aluno=(660*0.10)

print(aluno)
-- OUTPUT:
66.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:50:22) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	mensagem= "s ou n"
else:
	aluno=(660*0.10)

print(aluno,0)
-- OUTPUT:
66.0 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:51:17) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	mensagem= "s ou n"
else:
	aluno=float(66*0.10)

print(aluno)
-- OUTPUT:
6.6000000000000005
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 03:51:32) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	mensagem= "s ou n"
else:
	aluno=float(66*0.10)

print(aluno)
-- EXECUTION TIME:
0.128346
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
6.6000000000000005
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
6.6000000000000005
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
6.6000000000000005
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:51:39) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	mensagem= "s ou n"
else:
	aluno=float(66*10)

print(aluno)
-- OUTPUT:
660.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:52:04) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	mensagem= "s ou n"
else:
	aluno=float(66*10)

print(round(aluno))
-- OUTPUT:
660
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:52:17) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	mensagem= "s ou n"
else:
	aluno=float(66*10%)

print(round(aluno))
-- ERROR:
File "XXXX", line 6
    aluno=float(66*10%)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:53:47) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	mensagem= "s ou n"
else:
	aluno=float(0.66*10)

print(round(aluno))
-- OUTPUT:
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 03:54:01) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	mensagem= "s ou n"
else:
	aluno=float(0.66*10)

print(round(aluno))
-- EXECUTION TIME:
0.176019
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
7
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
7
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:54:07) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	mensagem= "s ou n"
else:
	aluno=float(0.66*10)

print(aluno)
-- OUTPUT:
6.6000000000000005
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 03:54:22) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	mensagem= "s ou n"
else:
	aluno=float(0.66*10)

print(aluno)
-- EXECUTION TIME:
0.121609
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
6.6000000000000005
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
6.6000000000000005
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
6.6000000000000005
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:54:42) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	mensagem= "s ou n"
else:
	aluno=float(0.66*10)

print(aluno,1
-- ERROR:
File "XXXX", line 9
    
                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 03:54:47) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	mensagem= "s ou n"
else:
	aluno=float(0.66*10)

print(aluno,1)
-- EXECUTION TIME:
0.126981
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
6.6000000000000005 1
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
6.6000000000000005 1
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
6.6000000000000005 1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:54:50) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	mensagem= "s ou n"
else:
	aluno=float(0.66*10)

print(aluno,1)
-- OUTPUT:
6.6000000000000005 1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:55:16) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	mensagem= "s ou n"
else:
	aluno=float(0.66*10)

print(round(aluno,1)
-- ERROR:
File "XXXX", line 9
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 03:55:28) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	mensagem= "s ou n"
else:
	aluno=float(0.66*10)

print(round(aluno,1))
-- OUTPUT:
6.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 03:55:41) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	mensagem= "s ou n"
else:
	aluno=float(0.66*10)

print(round(aluno,1))
-- EXECUTION TIME:
0.125732
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
6.6
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
6.6
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
6.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:52:47) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	mensagem= "s ou n"
else:
	aluno=float(0.66*10)

print(round(aluno,1))
-- OUTPUT:
6.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:27:23) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input()
if  0 == 10:
	mensagem= "s ou n"
else:
	aluno=float(0.66*10)

print(round(aluno,1))
-- OUTPUT:
6.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:30:57) 
-- CODE:
nota=float(input("digite a nota:"))
aprovacao=input("modificacao:")
if nota 0 >= 10:
	mensagem= 
else:
	aluno=float(0.66*10)

print(round(aluno,1))
-- ERROR:
File "XXXX", line 3
    if nota 0 >= 10:
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:42:03) 
-- CODE:
nota_do_aluno = float(input("nota: "))
aluno=input("S ou N")
bonificacao = 10 / 100
if(aluno=="S"):
	print(nota +10/100)
else:
	print(nota)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(nota +10/100)
NameError: name 'nota' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:42:22) 
-- CODE:
nota_do_aluno = float(input("nota: "))
aluno=input("S ou N")
bonificacao = 10 / 100
if(aluno=="S"):
	print(nota +10/100)
else:
	print(nota)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(nota +10/100)
NameError: name 'nota' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:42:49) 
-- CODE:
nota_do_aluno = float(input("nota: "))
aluno=input("S ou N")
if(aluno=="S"):
	print(nota +10/100)
else:
	print(nota)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(nota +10/100)
NameError: name 'nota' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:43:02) 
-- CODE:
nota_do_aluno = float(input("nota: "))
aluno=input("S ou N")
if(aluno=="S"):
	print(nota +10/100)
else:
	print(nota,1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(nota +10/100)
NameError: name 'nota' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:43:55) 
-- CODE:
nota_do_aluno = float(input("nota: "))
aluno=input("S ou N")
if(aluno=="S"):
	print(nota +10/100)
else:
	print("N")
print(nota)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(nota +10/100)
NameError: name 'nota' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:45:30) 
-- CODE:
nota_do_aluno = float(input("nota: "))
aluno=input("S ou N")
if(aluno=="S"):
	print=(nota +10/100)
else:
	print("N")
print(nota_do_aluno)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print=(nota +10/100)
NameError: name 'nota' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 16:45:40) 
-- CODE:
nota_do_aluno = float(input("nota: "))
aluno=input("S ou N")
if(aluno=="S"):
	print=(nota +10/100)
else:
	print("N")
print(nota_do_aluno)
-- EXECUTION TIME:
0.140248
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2704/main.py", line 4, in <module>
    print=(nota +10/100)
NameError: name 'nota' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:46:21) 
-- CODE:
nota_do_aluno = float(input("nota: "))
aluno=input("S ou N")
if(aluno=="S"):
	print(nota +10/100)
else:
	print("N")
print(nota_do_aluno)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(nota +10/100)
NameError: name 'nota' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 16:46:30) 
-- CODE:
nota_do_aluno = float(input("nota: "))
aluno=input("S ou N")
if(aluno=="S"):
	print(nota +10/100)
else:
	print("N")
print(nota_do_aluno)
-- EXECUTION TIME:
0.138892
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2704/main.py", line 4, in <module>
    print(nota +10/100)
NameError: name 'nota' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:46:49) 
-- CODE:
nota_do_aluno = float(input("nota: "))
aluno=input("S ou N")
if(aluno=="S"):
	print(aluno +10/100)
else:
	print("N")
print(nota_do_aluno)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(aluno +10/100)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 16:46:59) 
-- CODE:
nota_do_aluno = float(input("nota: "))
aluno=input("S ou N")
if(aluno=="S"):
	print(aluno +10/100)
else:
	print("N")
print(nota_do_aluno)
-- EXECUTION TIME:
0.213866
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2704/main.py", line 4, in <module>
    print(aluno +10/100)
TypeError: Can't convert 'float' object to str implicitly

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:47:16) 
-- CODE:
nota_do_aluno = float(input("nota: "))
aluno=input("S ou N")
if(aluno=="S"):
	print("aluno" +10/100)
else:
	print("N")
print(nota_do_aluno)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("aluno" +10/100)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:47:56) 
-- CODE:
nota_do_aluno = float(input("nota: "))
aluno=input("S ou N")
if(aluno=="S"):
	print(nota_do_aluno +10/100)
else:
	print("N")
print(nota_do_aluno)
-- OUTPUT:
5.1
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:48:37) 
-- CODE:
nota_do_aluno = float(input("nota: "))
aluno=input("S ou N")
if(aluno=="S"):
	print( nota*10/100)
else:
	print("N")
print(nota_do_aluno)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print( nota*10/100)
NameError: name 'nota' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 16:48:51) 
-- CODE:
nota_do_aluno = float(input("nota: "))
aluno=input("S ou N")
if(aluno=="S"):
	print( nota*10/100)
else:
	print("N")
print(nota_do_aluno)
-- EXECUTION TIME:
0.279285
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2704/main.py", line 4, in <module>
    print( nota*10/100)
NameError: name 'nota' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:49:01) 
-- CODE:
nota_do_aluno = float(input("nota: "))
aluno=input("S ou N")
if(aluno=="S"):
	print( nota_do_aluno*10/100)
else:
	print("N")
print(nota_do_aluno)
-- OUTPUT:
0.5
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 16:49:10) 
-- CODE:
nota_do_aluno = float(input("nota: "))
aluno=input("S ou N")
if(aluno=="S"):
	print( nota_do_aluno*10/100)
else:
	print("N")
print(nota_do_aluno)
-- EXECUTION TIME:
0.159777
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
0.5
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
0.9
9.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
N
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:49:18) 
-- CODE:
nota_do_aluno = float(input("nota: "))
aluno=input("S ou N")
if(aluno=="S"):
	print( nota_do_aluno*10/100)
else:
	print("N")
print(nota_do_aluno)
-- OUTPUT:
0.5
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 16:49:29) 
-- CODE:
nota_do_aluno = float(input("nota: "))
aluno=input("S ou N")
if(aluno=="S"):
	print( nota_do_aluno*10/100)
else:
	print("N")
print(nota_do_aluno)
-- EXECUTION TIME:
0.122463
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
0.5
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
0.9
9.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
N
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:49:32) 
-- CODE:
nota_do_aluno = float(input("nota: "))
aluno=input("S ou N")
if(aluno=="S"):
	print( nota_do_aluno*10/100)
else:
	print("N")
print(nota_do_aluno)
-- OUTPUT:
0.5
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:49:51) 
-- CODE:
nota_do_aluno = float(input("nota: "))
aluno=input("S ou N")
if(aluno=="S"):
	print(aluno*10/100)
else:
	print("N")
print(nota_do_aluno)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(aluno*10/100)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 16:50:03) 
-- CODE:
nota_do_aluno = float(input("nota: "))
aluno=input("S ou N")
if(aluno=="S"):
	print(aluno*10/100)
else:
	print("N")
print(nota_do_aluno)
-- EXECUTION TIME:
0.131711
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2704/main.py", line 4, in <module>
    print(aluno*10/100)
TypeError: unsupported operand type(s) for /: 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:51:00) 
-- CODE:
nota_do_aluno = float(input("nota: "))
aluno=input("S ou N")
if(aluno=="S"):
	print(nta_do_aluno+(nota_do_aluno*10/100))
else:
	print("N")
print(nota_do_aluno)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(nta_do_aluno+(nota_do_aluno*10/100))
NameError: name 'nta_do_aluno' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 16:51:09) 
-- CODE:
nota_do_aluno = float(input("nota: "))
aluno=input("S ou N")
if(aluno=="S"):
	print(nta_do_aluno+(nota_do_aluno*10/100))
else:
	print("N")
print(nota_do_aluno)
-- EXECUTION TIME:
0.173026
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2704/main.py", line 4, in <module>
    print(nta_do_aluno+(nota_do_aluno*10/100))
NameError: name 'nta_do_aluno' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:51:37) 
-- CODE:
nota_do_aluno = float(input("nota: "))
aluno=input("S ou N")
if(aluno=="S"):
	print(nota_do_aluno+(nota_do_aluno*10/100))
else:
	print("N")
print(nota_do_aluno)
-- OUTPUT:
5.5
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 16:51:58) 
-- CODE:
nota_do_aluno = float(input("nota: "))
aluno=input("S ou N")
if(aluno=="S"):
	print(nota_do_aluno+(nota_do_aluno*10/100))
else:
	print("N")
print(nota_do_aluno)
-- EXECUTION TIME:
0.157905
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
9.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
N
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:52:26) 
-- CODE:
nota_do_aluno = float(input("nota: "))
aluno=input("S ou N")
if(aluno=="S"):
	print(nota_do_aluno+(6.6*10/100))
else:
	print("N")
print(nota_do_aluno)
-- OUTPUT:
5.66
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:52:36) 
-- CODE:
nota_do_aluno = float(input("nota: "))
aluno=input("S ou N")
if(aluno=="S"):
	print(nota_do_aluno+(66*10/100))
else:
	print("N")
print(nota_do_aluno)
-- OUTPUT:
11.6
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:52:51) 
-- CODE:
nota_do_aluno = float(input("nota: "))
aluno=input("S ou N")
if(aluno=="S"):
	print(nota_do_aluno+("S"*10/100))
else:
	print("N")
print(nota_do_aluno)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(nota_do_aluno+("S"*10/100))
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:53:07) 
-- CODE:
nota_do_aluno = float(input("nota: "))
aluno=input("S ou N")
if(aluno=="S"):
	print(nota_do_aluno+(0.6*10/100))
else:
	print("N")
print(nota_do_aluno)
-- OUTPUT:
5.06
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 16:53:20) 
-- CODE:
nota_do_aluno = float(input("nota: "))
aluno=input("S ou N")
if(aluno=="S"):
	print(nota_do_aluno+(*10/100))
else:
	print("N")
print(nota_do_aluno)
-- EXECUTION TIME:
0.297269
-- ERROR:
  File "/home/codebench/codes/1643/2704/main.py", line 4
    print(nota_do_aluno+(*10/100))
                         ^
SyntaxError: can use starred expression only as assignment target

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:54:45) 
-- CODE:
nota = float(input("nota: "))
aluno=input("S ou N")
if(aluno=="S"):
	print(nota+(*10/100))
else:
	print("N")
print(nota + (nota*10 / 100))
-- ERROR:
File "XXXX", line 4
    print(nota+(*10/100))
               ^
SyntaxError: can't use starred expression here
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:54:53) 
-- CODE:
nota = float(input("nota: "))
aluno=input("S ou N")
if(aluno=="S"):
	print(nota+(*10/100))
else:
	print("N")
print(nota + (nota*10 / 100))
-- ERROR:
File "XXXX", line 4
    print(nota+(*10/100))
               ^
SyntaxError: can't use starred expression here
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:55:14) 
-- CODE:
nota = float(input("nota: "))
aluno=input("S ou N")
if(aluno=="S"):
	print(nota+(10/100))
else:
	print("N")
print(nota + (nota*10 / 100))
-- OUTPUT:
5.1
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 16:55:36) 
-- CODE:
nota = float(input("nota: "))
aluno=input("S ou N")
if(aluno=="S"):
	print(nota+(10/100))
else:
	print("N")
print(nota + (nota*10 / 100))
-- EXECUTION TIME:
0.193472
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.1
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.1
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
N
4.840000000000001
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:56:05) 
-- CODE:
nota = float(input("nota: "))
aluno=input("S ou N")
if(aluno=="S"):
	print(nota+(nota * 10/100))
else:
	print("N")
print(nota + (nota*10 / 100))
-- OUTPUT:
5.5
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 16:56:20) 
-- CODE:
nota = float(input("nota: "))
aluno=input("S ou N")
if(aluno=="S"):
	print(nota+(nota * 10/100))
else:
	print("N")
print(nota + (nota*10 / 100))
-- EXECUTION TIME:
0.126797
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
N
4.840000000000001
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:57:44) 
-- CODE:
nota = float(input("nota: "))
aluno=input("S ou N: ")
if(aluno=="S"):
	print(nota+(nota * 10/100))
else:
	print("N")
print(nota + (nota*10 / 100))
-- OUTPUT:
5.5
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:58:09) 
-- CODE:
nota = float(input("nota: "))
aluno=input("S ou N: ")
if(aluno=="S"):
	print(nota+(nota * 10/100))
else:
	print("N")

-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 16:58:23) 
-- CODE:
nota = float(input("nota: "))
aluno=input("S ou N: ")
if(aluno=="S"):
	print(nota+(nota * 10/100))
else:
	print("N")

-- EXECUTION TIME:
0.141318
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
N
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 16:59:38) 
-- CODE:
nota = float(input("nota: "))
aluno=input("S ou N: ")
if(aluno=="S"):
	print(nota +(nota * 10/100))
else:
	print(nota)

-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 16:59:56) 
-- CODE:
nota = float(input("nota: "))
aluno=input("S ou N: ")
if(aluno=="S"):
	print(nota +(nota * 10/100))
else:
	print(nota)

-- EXECUTION TIME:
0.278594
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
